@@ -1,3 +1,11 @@
+2007-04-01  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSCache.m:
+	* GSThroughput.m:
+	* GSSkipMutableArray.m:
+	* GSTicker.m:
+	Changes to avoid compiler warnings on MacOS-X
+
 2006-11-11  Matt Rice <ratmice@gmail.com>
 
 	* GSMutableSkipArray.m: Fix bug when deallocating an empty list.
